# auto-chia-wallet

./: .gitignore  LICENSE  MANIFEST.in  README.md  account_creator.py  setup.cfg
auto_chia_wallet/: __init__.py  __main__.py  arg_parser.py  auto_wallet.py  cli.py  config.py  fake_wallet.py  feed_wallet.py
auto_chia_wallet/defaults/: config.yaml
examples/: aws_lambda.py
src/auto_chia_wallet/: __init__.py  __main__.py  arg_parser.py  auto_wallet.py  cli.py  config.py  fake_wallet.py  feed_wallet.py
src/auto_chia_wallet/defaults/: config.yaml
