[metadata]
name = auto_chia_wallet
version = file: VERSION
author = James Hoerr
home_page = https://github.com/DaOneLuna/auto-chia-wallet
description = Chia Account and PlotNFT Generator
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2.0
license_file = LICENSE
python_requires = >=3.7
keywords = chia, blockchain, automation
classifiers =
    Development Status :: Alpha
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: System :: Monitoring
    Topic :: System :: Systems Administration
    Topic :: Utilities
project_urls =
    Bug Tracker = https://github.com/DaOneLuna/auto-chia-wallet/issues
    Changelog = https://github.com/DaOneLuna/auto-chia-wallet/src/main/CHANGELOG.md

[options]
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    asyncio
    appdirs
    argparse
    desert
    marshmallow
    marshmallow-enum
    psutil ~= 5.8
    pyyaml
    chia-blockchain

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    autowallet = auto_chia_wallet.cli:main

[options.data_files]
config = src/auto_chia_wallet/defaults/config.yaml